# HACKATHON

./: .gitignore  ARCHITECTURE.md  PRD_여기차려.md  README.md  data_inventory.md
analysis/: breakdown_206_한식.csv  correlation_matrix.csv  correlation_matrix.md
backend/: pyproject.toml
backend/app/: alternatives.py  budget.py  get_naver.py  get_naver_key.py  grid.py  home_distance.py  main.py  region_aliases.py  schemas.py  scoring.py  trend.py
backend/app/api/: analyze.py  grid.py  grid_report.py
backend/app/data_provider/: __init__.py  base.py  geo.py  mock_provider.py
backend/app/data_provider/local/: category_mapping.py  consumption_loader.py  dong_boundary_loader.py  dong_mapper.py  foot_traffic_loader.py  local_provider.py  population_loader.py  restaurant_loader.py  sanggabu_loader.py
backend/app/llm/: grid_report.py  query_parser.py  report.py  review_analyzer.py  strategy.py
backend/app/ml/: predict.py
backend/app/ml/artifacts/: track_a_음식점.joblib  track_a_음식점_meta.json
backend/scripts/: analyze_scoring_bounds.py  train_track_a.py
backend/tests/: test_alternatives.py  test_app_imports.py  test_budget.py  test_dong_mapper.py  test_geo.py  test_home_distance.py  test_local_provider.py  test_parse_query_endpoint.py  test_query_parser.py  test_report.py  test_report_cache.py  test_scoring.py  test_strategy.py  test_trend.py
frontend/: index.html  package-lock.json
frontend/public/: busan_dong_boundaries.geojson
frontend/src/: App.css  App.jsx  api.js  colorScale.js  index.css  (+3 more)
scripts/: download_busan_full_data.py  test_analyze_api.sh
(+9 files in other folders)
